manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kcaraway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kcaraway.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kcaraway-svc
            port: 
              number: 80
